# mammos

./: .gitignore  AUTHORS  DESIGN.md  Makefile  Makefile.am  Makefile.inc  README.md  README.txt  TODO.txt  design.md
boot/: Makefile  boot.ld  ebr.asm  mbr.asm
boot/debug/: stage1.elf  stage2.elf
boot/stage1/: Makefile  stage1.asm  stage1.ld
boot/stage2/: Makefile  stage2.c  stage2.h  stage2.ld
boot/stage2/fs/: fat.c  fat.h  minix.c  minix.h
boot/stage2/utils/: disk.asm  disk.h  tools.c  tools.h
check/: Makefile  emulate.sh  gdb.init  gdb2.init  gdbinit  launchqemu.sh  mkdrive.sh  partitions  table
check/filesystem/: config
check/filesystem/boot/: config
check/rootfs/boot/: config  kernel
include/: disk.h  filesystem.h  frames.h  gdt.h  heap.h  idt.h  kheap.h  memory.h  paging.h  partitions.h  stdint.h  stdlib.h  system.h  tty.h
include/fs/: fat.h  minix.h
kernel/: Makefile  kernel.ld
kernel/drivers/: Makefile  disk.asm  disk.c  disk.h  tty.c  tty.h
kernel/init/: Makefile  entry.asm  frames.c  frames.h  gdt.c  gdt.h  idt.c  idt.h  isr.asm  kheap.c  kheap.h  paging.c  paging.h
kernel/lib/: Makefile  heap.c  heap.h  stdlib.c  stdlib.h  system.c  system.h
kernel/main/: Makefile  kernel.c
src/: boot.asm  bootloader.S  bootloader.nasm  disk.asm  entry.asm  filesystem.c  frames.c  gdt.c  heap.c  idt.c  init.S  isr.asm  kernel.c  kheap.c  linker.ld  memory.c  paging.c  stdlib.c  system.c  tty.c
src/bootloader/: DESIGN.md  linking.nasm  stage1.nasm  stage2.nasm
src/kernel/: kernel.c  kernel.ld  kernel.nasm
utils/: partitions
(+1 files in other folders)
